# ansible-pacemaker

./: .coveragerc  .gitreview  .pylintrc  LICENSE  README.md  groups  project.config  requirements.txt  setup.cfg  tox.ini
config/: ansible.cfg
modules/: pacemaker_cluster.py  pacemaker_is_active.py  pacemaker_resource.py
test/units/module/: cluster_good.xml  test_pacemaker_is_active.py
tests/units/module/: cluster_good.xml  test_pacemaker_is_active.py
