[metadata]
name = tripleo-ansible-modules
summary = Ansible modules for TripleO
description-file =
    README.md
author = Tripleo
author-email = mbultel@redhat.com
home-page = https://github.com/redhat-openstack/tripleo-ansible-modules
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/share/tripleo-ansible-modules/ = modules/*
    etc/ansible/ = config/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
