[metadata]
name = ansible-pacemaker
summary = Ansible modules for Pacemaker
description-file =
    README.md
author = RedHat
author-email = mbultel@redhat.com
home-page = https://github.com/redhat-openstack/ansible-pacemaker
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/share/ansible-modules/ = modules/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
